[build-system]
requires = ["requests"]
build-backend = "hatchling.build"

[project]
name = "ibott-robot-manager"
version = "0.0.1"
authors = [
    { name="iBott", email="ecrespo@ibott.io" },
]
description = "This packages allows to use ibott robot console features More information in ibott.io"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/albertorc87/subir-paquete-pypi"
"Bug Tracker" = "https://github.com/albertorc87/subir-paquete-pypi/issues"